--- a/work/dallas-city-hall-style-guide.html
+++ b/work/dallas-city-hall-style-guide.html
@@ -39,7 +39,7 @@
       <div class="project-header">
         <h6>City of Dallas</h6>
         <h4>Live Style Guide</h4>
-        <p>Lead the creation of the City of Dallas live style guide. Crafted the style guide using a design system framework to provide a better workflow, bring consistency, an overall better user experience and help build trust with the City&#x27;s web presence. We call it a live style guide because it evolves as we continue to develop our web interface. Though it is not a true design system we plan to make strides towards one.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Sketch &amp; Frontify<br><strong>Year:</strong> 2017<br>
+        <p>Collaborated with design team to establish and create the City of Dallas live style guide. Help to craft the style guide using a design system framework to provide a better workflow, bring consistency, an overall better user experience and help build trust with the City&#x27;s web presence. We call it a live style guide because it evolves as we continue to develop our web interface. Though it is not a true design system we plan to make strides towards one.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Sketch &amp; Frontify<br><strong>Year:</strong> 2017<br>
           <a href="https://cityofdallas.frontify.com/d/SjRBA4GEQCYH" target="_blank"></a>
         </p>
       </div>
