--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 09 2024 03:45:45 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 31 2025 04:55:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -139,12 +139,12 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/oem-website-redesign.html" class="work-link-block w-inline-block">
-        <div class="work1 workoem"></div>
+      <a href="work/council-districts.html" class="work-link-block w-inline-block">
+        <div class="work1 work-council-districts"></div>
         <div class="div-block-7">
           <div class="div-block-5">
-            <h4 class="work-heading">UI Design</h4>
-            <p class="paragraph-2">Office of Emergency Management</p>
+            <h4 class="work-heading">UX/UI Design</h4>
+            <p class="paragraph-2">Concepts for the Dallas City Council Districts</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
@@ -189,12 +189,12 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/dallas-365-landing-page-design.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-dallas365"></div>
+      <a href="work/dallas-fire-rescue.html" class="work-link-block worklinkblock2col w-inline-block">
+        <div class="work1 work-dfr"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">UI Design</h4>
-            <p class="paragraph-2">Dallas 365 Landing Page</p>
+            <p class="paragraph-2">Dallas Fire Rescue</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
@@ -396,7 +396,7 @@
   </div>
   <div id="Footer" class="footer">
     <div class="footer-div">
-      <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
+      <p class="copyright">© Copyright 2025 Vanessa Salinas - All Rights Reserved</p>
       <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
