--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="intro-div">
     <div class="about-div">
       <p class="hero-text-v2">UX/UI Design &amp; Development</p>
-      <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences and products.</p>
+      <p class="intro-paragraph">Experience in graphic design, web design and front end development. Create or improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences and products.</p>
     </div>
     <div class="icon-div">
       <div class="w-layout-grid grid">
