--- a/work/dallas-city-hall-style-guide.html
+++ b/work/dallas-city-hall-style-guide.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 31 2025 04:55:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Jul 20 2025 03:57:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60ca33936dec8bd86b065f1a" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,10 @@
         <h4>Live Style Guide</h4>
         <p>Lead the creation of the City of Dallas live style guide. Crafted the style guide using a design system framework to provide a better workflow, bring consistency, an overall better user experience and help build trust with the City&#x27;s web presence. We call it a live style guide because it evolves as we continue to develop our web interface. Though it is not a true design system we plan to make strides towards one.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Sketch &amp; Frontify<br><strong>Year:</strong> 2017<br></p>
       </div>
-      <div class="resources-div"><img src="../images/DCH-Style-Guide-Showcase.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/DCH-Style-Guide-Showcase-p-500.jpeg 500w, ../images/DCH-Style-Guide-Showcase-p-800.jpeg 800w, ../images/DCH-Style-Guide-Showcase-p-1080.jpeg 1080w, ../images/DCH-Style-Guide-Showcase.jpg 1400w" alt="" class="image-2"></div>
+      <div class="resources-div"><img src="../images/1-Dalllasgov-Mood-Board-v2.jpg" loading="lazy" sizes="(max-width: 1440px) 100vw, 1440px" srcset="../images/1-Dalllasgov-Mood-Board-v2.jpg 500w, ../images/1-Dalllasgov-Mood-Board-v2.jpg 800w, ../images/1-Dalllasgov-Mood-Board-v2.jpg 1080w, ../images/1-Dalllasgov-Mood-Board-v2.jpg 1440w" alt="" class="image-2"><img src="../images/2-Dalllasgov-Mood-Board.jpg" loading="lazy" sizes="(max-width: 1440px) 100vw, 1440px" srcset="../images/2-Dalllasgov-Mood-Board.jpg 500w, ../images/2-Dalllasgov-Mood-Board.jpg 800w, ../images/2-Dalllasgov-Mood-Board.jpg 1080w, ../images/2-Dalllasgov-Mood-Board.jpg 1440w" alt="" class="image-2"><img src="../images/3-Dalllasgov-Mood-Board-4.jpg" loading="lazy" sizes="(max-width: 1440px) 100vw, 1440px" srcset="../images/3-Dalllasgov-Mood-Board-4.jpg 500w, ../images/3-Dalllasgov-Mood-Board-4.jpg 800w, ../images/3-Dalllasgov-Mood-Board-4.jpg 1080w, ../images/3-Dalllasgov-Mood-Board-4.jpg 1440w" alt="" class="image-2"><img src="../images/4-Dalllasgov-Mood-Board-7.jpg" loading="lazy" sizes="(max-width: 1440px) 100vw, 1440px" srcset="../images/4-Dalllasgov-Mood-Board-7.jpg 500w, ../images/4-Dalllasgov-Mood-Board-7.jpg 800w, ../images/4-Dalllasgov-Mood-Board-7.jpg 1080w, ../images/4-Dalllasgov-Mood-Board-7.jpg 1440w" alt="" class="image-2"></div>
+      <p class="project-button">
+        <a href="https://cityofdallas.frontify.com/d/SjRBA4GEQCYH" target="_blank" class="link">Explore the Live Style Guide</a>
+      </p>
     </div>
     <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" alt="Left Arrow Icon" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px">
       <div class="text-block">Back</div>
@@ -50,7 +53,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2025 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
