--- a/work/mood-board-concepts-for-the-future-dallas-dot-gov.html
+++ b/work/mood-board-concepts-for-the-future-dallas-dot-gov.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 31 2025 04:55:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Jul 20 2025 03:57:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61490e987a9d63129fdc95bb" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -39,11 +39,11 @@
       <div class="project-header">
         <h6>Concepts for Dallas.gov</h6>
         <h4>Mood Board Designs</h4>
-        <p>Reimagine Dallas City Hall website from the ground up. New fonts, colors, style, service led design inspiration. Vision #1 is a lightweight, clean and bright vision. Vision #2 is rich and bold. Vision #3 is a vibrant, off the beaten path of a traditional look and feel of City services.<br><br><strong>Role:</strong> Visual Designer<br><strong>Programs:</strong> Adobe Illustrator, Adobe Photoshop, Adobe XD<br><strong>Year:</strong> 2021</p>
+        <p>Reimagine Dallas City Hall website from the ground up. New fonts, colors, style, service led design inspiration. Vision #1 is a lightweight, clean and bright vision. Vision #2 is rich and bold.<br><br><strong>Role:</strong> Visual Designer<br><strong>Programs:</strong> Adobe Illustrator, Adobe Photoshop, Adobe XD<br><strong>Year:</strong> 2021</p>
       </div>
       <div class="resources-div">
-        <h5>Vision #1</h5><img src="../images/Mood-Board-v1.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Mood-Board-v1-p-500.jpeg 500w, ../images/Mood-Board-v1.jpg 1440w" alt="Mood Board for Vision 1" class="image-2">
-        <h5>Vision #2</h5><img src="../images/Mood-Board-v2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Mood-Board-v2-p-500.jpeg 500w, ../images/Mood-Board-v2.jpg 1440w" alt="Mood Board for Vision 2" class="image-2">
+        <h5>Vision #1</h5><img src="../images/Mood-Board-v1.jpg" loading="lazy" sizes="(max-width: 1440px) 100vw, 1440px" srcset="../images/Mood-Board-v1-p-500.jpeg 500w, ../images/Mood-Board-v1.jpg 1440w" alt="Mood Board for Vision 1" class="image-2">
+        <h5>Vision #2</h5><img src="../images/Mood-Board-v2.jpg" loading="lazy" sizes="(max-width: 1440px) 100vw, 1440px" srcset="../images/Mood-Board-v2-p-500.jpeg 500w, ../images/Mood-Board-v2.jpg 1440w" alt="Mood Board for Vision 2" class="image-2">
       </div>
     </div>
     <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" alt="Left Arrow Icon" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px">
@@ -53,7 +53,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2025 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
