--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 31 2025 04:55:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Jul 20 2025 03:57:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
   <div class="intro-div">
     <div class="about-div">
       <p class="hero-text-v2">UX/UI Design &amp; Development</p>
-      <p class="intro-paragraph">Experience in graphic design, web design and front end development. Create or improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences and products.</p>
+      <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences and products.</p>
     </div>
     <div class="icon-div">
       <div class="w-layout-grid grid">
@@ -99,7 +99,7 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a id="w-node-ab74a316-4e3b-2112-137b-38239a7ce6f6-0a720657" href="work/dallas-city-hall-homepage-refresh-concepts.html" class="work-link-block w-inline-block">
+      <a href="work/dallas-city-hall-homepage-refresh-concepts.html" class="work-link-block w-inline-block">
         <div class="work1 dch-refresh-home-2024"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -109,7 +109,7 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a id="w-node-deb52626-ab80-e87c-af3d-c783040247c8-0a720657" href="work/city-of-dallas-newsroom-concepts.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/city-of-dallas-newsroom-concepts.html" class="work-link-block worklinkblock2col w-inline-block">
         <div class="work1 dch-newsroom-2024"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -236,7 +236,7 @@
             <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
             <p class="paragraph-2">Approved to Print</p>
           </div>
-          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 3vw, (max-width: 991px) 4vw, 33px" alt=""></div>
+          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="(max-width: 512px) 100vw, 512px" alt=""></div>
         </div>
       </a>
       <a href="work/jason-carlson-ascension-website-design.html" class="work-link-block w-inline-block">
@@ -386,7 +386,7 @@
       <div class="about-div">
         <h3 class="hero-text-v2">Get in Touch</h3>
         <p class="paragraph-contact">Continuous learning and practicing web accessibility standards in design and front end development. Staying up-to-date on trends and techniques in web and design.<br></p>
-        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 479px) 34px, (max-width: 767px) 40px, 48px" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
+        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="100vw" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
             <p class="link-block-text-contact">Connect with me on LinkedIn</p>
           </div>
@@ -397,7 +397,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2025 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
