--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Jul 20 2025 03:57:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jul 21 2025 22:40:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -89,52 +89,12 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/mood-board-concepts-for-the-future-dallas-dot-gov.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 mood-boards-dallasgov"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Mood Boards</h4>
-            <p class="paragraph-2">Concepts for Dallas.gov</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
       <a href="work/dallas-city-hall-homepage-refresh-concepts.html" class="work-link-block w-inline-block">
         <div class="work1 dch-refresh-home-2024"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">Dallas City Hall</h4>
             <p class="paragraph-2">Concepts for City of Dallas Homepage Refresh</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/city-of-dallas-newsroom-concepts.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 dch-newsroom-2024"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Dallas City News</h4>
-            <p class="paragraph-2">Concepts for City of Dallas Newsroom (The Hub)</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/boards-commissions-website.html" class="work-link-block w-inline-block">
-        <div class="work1 boardscommissions"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">UX/UI Design</h4>
-            <p class="paragraph-2">City of Dallas Boards &amp; Commissions</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/dallas-bond-website-design.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-dallas-bond"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">UI Design</h4>
-            <p class="paragraph-2">Dallas Bond Program</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
@@ -149,12 +109,12 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/cod-logo-concepts.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 workcodlogo"></div>
+      <a href="work/boards-commissions-website.html" class="work-link-block w-inline-block">
+        <div class="work1 boardscommissions"></div>
         <div class="div-block-7">
           <div class="div-block-5">
-            <h4 class="work-heading">Logo Design</h4>
-            <p class="paragraph-2">Concepts for Dallas.gov&#x27;s Future Website</p>
+            <h4 class="work-heading">UX/UI Design</h4>
+            <p class="paragraph-2">City of Dallas Boards &amp; Commissions</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
@@ -169,7 +129,37 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/planning-and-urban-design-website.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/dallas-bond-website-design.html" class="work-link-block w-inline-block">
+        <div class="work1 work-dallas-bond"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">UI Design</h4>
+            <p class="paragraph-2">Dallas Bond Program</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
+        </div>
+      </a>
+      <a href="work/resilient-dallas-website-design.html" class="work-link-block w-inline-block">
+        <div class="work1 resilientdallas"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">UX/UI Design</h4>
+            <p class="paragraph-2">Resilient Dallas</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
+        </div>
+      </a>
+      <a href="work/cod-logo-concepts.html" class="work-link-block w-inline-block">
+        <div class="work1 workcodlogo"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">Logo Design</h4>
+            <p class="paragraph-2">Concepts for Dallas.gov&#x27;s Future Website</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
+        </div>
+      </a>
+      <a href="work/planning-and-urban-design-website.html" class="work-link-block w-inline-block">
         <div class="work1 work-pud"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -189,7 +179,7 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/dallas-fire-rescue.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/dallas-fire-rescue.html" class="work-link-block w-inline-block">
         <div class="work1 work-dfr"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -209,7 +199,7 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/dallas-city-hall-menu-redesign.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/dallas-city-hall-menu-redesign.html" class="work-link-block w-inline-block">
         <div class="work1 work-dch-menu"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -229,7 +219,7 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="http://approvedtoprint.com" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="http://approvedtoprint.com" target="_blank" class="work-link-block w-inline-block">
         <div class="work1 work-approved-to-print"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -249,7 +239,7 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/city-of-dallas-its-tablecloth-design.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/city-of-dallas-its-tablecloth-design.html" class="work-link-block w-inline-block">
         <div class="work1 work-tablecloth"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -259,42 +249,12 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/highway-west-vacations-responsive-html-email.html" class="work-link-block w-inline-block">
-        <div class="work1 work-hwv-email"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Responsive HTML Email Design &amp; Development</h4>
-            <p class="paragraph-2">Highway West Vacations</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/bubbly-cloth-logo-design.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/bubbly-cloth-logo-design.html" class="work-link-block w-inline-block">
         <div class="work1 bubbly-cloth-logo"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">The Bubbly Cloth</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/la-creme-box-art-design.html" class="work-link-block w-inline-block">
-        <div class="work1 work-la-creme-package"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Package Design</h4>
-            <p class="paragraph-2">La Creme</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/child-perfume-package-design.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-child-perfume-sample"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Package Design</h4>
-            <p class="paragraph-2">Child Perfume</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
@@ -309,7 +269,7 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/la-creme-tag-design.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/la-creme-tag-design.html" class="work-link-block w-inline-block">
         <div class="work1 work-la-creme-labels"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -329,52 +289,12 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/la-creme-truck-design.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-la-creme-truck"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Truck Design</h4>
-            <p class="paragraph-2">La Creme / DeCoty</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/jefferson-at-dedham-station-brochure-design.html" class="work-link-block w-inline-block">
-        <div class="work1 work-jefferson-dedham-station"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Brochure Design</h4>
-            <p class="paragraph-2">Jefferson at Dedham Station</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/brinks-monitronics-t-shirt-designs.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/brinks-monitronics-t-shirt-designs.html" class="work-link-block w-inline-block">
         <div class="work1 work-moni-shirts"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">T-Shirt Design</h4>
             <p class="paragraph-2">Brinks/Monitronics (concepts)</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/jpt-graphics-car-wrap-design.html" class="work-link-block w-inline-block">
-        <div class="work1 work-jpt-car-wrap"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Car Wrap Design</h4>
-            <p class="paragraph-2">JPT Graphics</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="work/alderwood-heights-brochure-design.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-alderwood-heights"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Logo &amp; Brochure Design</h4>
-            <p class="paragraph-2">Alderwood Heights</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
@@ -385,8 +305,8 @@
     <div class="sec-content-div">
       <div class="about-div">
         <h3 class="hero-text-v2">Get in Touch</h3>
-        <p class="paragraph-contact">Continuous learning and practicing web accessibility standards in design and front end development. Staying up-to-date on trends and techniques in web and design.<br></p>
-        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="100vw" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
+        <p class="paragraph-contact">My strong attention to detail, commitment to continuous improvement in my craft, and my ability to create adaptable designs position me well to contribute positively to all projects I work on.<br></p>
+        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 950px) 100vw, 950px" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
             <p class="link-block-text-contact">Connect with me on LinkedIn</p>
           </div>
