--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jul 21 2025 22:40:00 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 22 2025 03:38:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -86,7 +86,6 @@
             <h4 class="work-heading">Style Guide</h4>
             <p class="paragraph-2">City of Dallas</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/dallas-city-hall-homepage-refresh-concepts.html" class="work-link-block w-inline-block">
@@ -96,7 +95,6 @@
             <h4 class="work-heading">Dallas City Hall</h4>
             <p class="paragraph-2">Concepts for City of Dallas Homepage Refresh</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/council-districts.html" class="work-link-block w-inline-block">
@@ -106,7 +104,6 @@
             <h4 class="work-heading">UX/UI Design</h4>
             <p class="paragraph-2">Concepts for the Dallas City Council Districts</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/boards-commissions-website.html" class="work-link-block w-inline-block">
@@ -116,7 +113,6 @@
             <h4 class="work-heading">UX/UI Design</h4>
             <p class="paragraph-2">City of Dallas Boards &amp; Commissions</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/housing-redesign-website.html" class="work-link-block w-inline-block">
@@ -126,7 +122,6 @@
             <h4 class="work-heading">UI Design</h4>
             <p class="paragraph-2">Housing and Neighborhood Revitalization</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/dallas-bond-website-design.html" class="work-link-block w-inline-block">
@@ -136,7 +131,6 @@
             <h4 class="work-heading">UI Design</h4>
             <p class="paragraph-2">Dallas Bond Program</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/resilient-dallas-website-design.html" class="work-link-block w-inline-block">
@@ -146,7 +140,6 @@
             <h4 class="work-heading">UX/UI Design</h4>
             <p class="paragraph-2">Resilient Dallas</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/cod-logo-concepts.html" class="work-link-block w-inline-block">
@@ -156,7 +149,6 @@
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">Concepts for Dallas.gov&#x27;s Future Website</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/planning-and-urban-design-website.html" class="work-link-block w-inline-block">
@@ -166,7 +158,6 @@
             <h4 class="work-heading">UI Design</h4>
             <p class="paragraph-2">Planning &amp; Urban Design</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/dallas-ideas-website-design.html" class="work-link-block w-inline-block">
@@ -176,7 +167,6 @@
             <h4 class="work-heading">Logo &amp; UI Design</h4>
             <p class="paragraph-2">My Dallas Ideas</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/dallas-fire-rescue.html" class="work-link-block w-inline-block">
@@ -186,7 +176,6 @@
             <h4 class="work-heading">UI Design</h4>
             <p class="paragraph-2">Dallas Fire Rescue</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/hr-design-audit.html" class="work-link-block w-inline-block">
@@ -196,7 +185,6 @@
             <h4 class="work-heading">Design Audit</h4>
             <p class="paragraph-2">City of Dallas Human Resources</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/dallas-city-hall-menu-redesign.html" class="work-link-block w-inline-block">
@@ -206,7 +194,6 @@
             <h4 class="work-heading">UX/UI Design</h4>
             <p class="paragraph-2">Dallas City Hall Menu</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/fuel-group-trading-website-design.html" class="work-link-block w-inline-block">
@@ -216,7 +203,6 @@
             <h4 class="work-heading">UI Design &amp; Development</h4>
             <p class="paragraph-2">Fuel Group Trading</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="http://approvedtoprint.com" target="_blank" class="work-link-block w-inline-block">
@@ -226,7 +212,6 @@
             <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
             <p class="paragraph-2">Approved to Print</p>
           </div>
-          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="(max-width: 512px) 100vw, 512px" alt=""></div>
         </div>
       </a>
       <a href="work/jason-carlson-ascension-website-design.html" class="work-link-block w-inline-block">
@@ -236,7 +221,6 @@
             <h4 class="work-heading">UI Design &amp; Development</h4>
             <p class="paragraph-2">Jason Carlson Ascension</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/city-of-dallas-its-tablecloth-design.html" class="work-link-block w-inline-block">
@@ -246,7 +230,6 @@
             <h4 class="work-heading">Tablecloth Design</h4>
             <p class="paragraph-2">City of Dallas Information and Technology Services</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/bubbly-cloth-logo-design.html" class="work-link-block w-inline-block">
@@ -256,17 +239,15 @@
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">The Bubbly Cloth</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/the-presidio-business-card-design.html" class="work-link-block w-inline-block">
-        <div class="work1 work-folded-business-card"></div>
+        <div class="work1 actitan"></div>
         <div class="div-block-7">
           <div class="div-block-5">
-            <h4 class="work-heading">Business Card Design</h4>
-            <p class="paragraph-2">The Presidio</p>
+            <h4 class="work-heading">Print Design</h4>
+            <p class="paragraph-2">AC Titan</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/la-creme-tag-design.html" class="work-link-block w-inline-block">
@@ -276,7 +257,6 @@
             <h4 class="work-heading">Tag Design</h4>
             <p class="paragraph-2">La Creme</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/the-legends-at-indian-springs-brochure-design.html" class="work-link-block w-inline-block">
@@ -286,7 +266,6 @@
             <h4 class="work-heading">Brochure Design</h4>
             <p class="paragraph-2">The Legends at Indian Springs</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
       <a href="work/brinks-monitronics-t-shirt-designs.html" class="work-link-block w-inline-block">
@@ -296,7 +275,6 @@
             <h4 class="work-heading">T-Shirt Design</h4>
             <p class="paragraph-2">Brinks/Monitronics (concepts)</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
     </div>
