--- a/work/dallas-city-hall-style-guide.html
+++ b/work/dallas-city-hall-style-guide.html
@@ -42,7 +42,7 @@
         <p><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Sketch &amp; Frontify<br><strong>Year:</strong> 2017<br></p>
       </div>
       <div class="resources-div"><img src="../images/style-guide-screenshots.jpg" loading="lazy" sizes="(max-width: 1650px) 100vw, 1650px" srcset="../images/style-guide-screenshots-p-500.jpg 500w, ../images/style-guide-screenshots-p-800.jpg 800w, ../images/style-guide-screenshots-p-1080.jpg 1080w, ../images/style-guide-screenshots-p-1600.jpg 1600w, ../images/style-guide-screenshots.jpg 1650w" alt=""></div>
-      <p class="project-desc">Lead the creation of the City of Dallas live style guide. Crafted the style guide using a design system framework to provide a better workflow, bring consistency, an overall better user experience and help build trust with the City&#x27;s web presence. We call it a live style guide because it evolves as we continue to develop our web interface. Though it is not a true design system we plan to make strides towards one.<br></p>
+      <p class="project-desc">Design and build the City of Dallas live style guide. Crafted the style guide using a design system framework to provide a better workflow, bring consistency, an overall better user experience and help build trust with the City&#x27;s web presence. We call it a live style guide because it evolves as we continue to develop our web interface. Though it is not a true design system we plan to make strides towards one.<br></p>
       <p class="project-button">
         <a href="https://cityofdallas.frontify.com/d/SjRBA4GEQCYH" target="_blank" class="link">Explore the Live Style Guide</a>
       </p>
