--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <div class="sec-content-div">
       <div class="about-div">
         <h3 class="hero-text-v2">Get in Touch</h3>
-        <p class="paragraph-contact">My strong attention to detail, commitment to continuous improvement in my craft, and my ability to create adaptable designs position me well to contribute positively to all projects I work on.<br></p>
+        <p class="paragraph-contact">I am well-positioned to make a valuable contribution to every project I work on because of my keen attention to detail, dedication to ongoing craft improvement, and capacity for producing flexible designs.<br></p>
         <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 950px) 100vw, 950px" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
             <p class="link-block-text-contact">Connect with me on LinkedIn</p>
