--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 22 2025 03:38:20 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 04 2025 02:27:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -112,6 +112,15 @@
           <div class="div-block-5">
             <h4 class="work-heading">UX/UI Design</h4>
             <p class="paragraph-2">City of Dallas Boards &amp; Commissions</p>
+          </div>
+        </div>
+      </a>
+      <a href="work/office-of-community-police-oversight.html" class="work-link-block w-inline-block">
+        <div class="work1 ocpo"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">UI Design</h4>
+            <p class="paragraph-2">Office of Community Police Oversight</p>
           </div>
         </div>
       </a>
@@ -238,6 +247,15 @@
           <div class="div-block-5">
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">The Bubbly Cloth</p>
+          </div>
+        </div>
+      </a>
+      <a href="work/the-holistic-fair-social-media-graphics.html" class="work-link-block w-inline-block">
+        <div class="work1 thf-social"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">Social Media Graphics</h4>
+            <p class="paragraph-2">The Holistic Fair</p>
           </div>
         </div>
       </a>
